# fumi-ai

./: .env  README.md  pyproject.toml  requirements.txt
apps/desktop/: README.md  package-lock.json  package.json
chroma/: .gitkeep  chroma.sqlite3
config/: .gitkeep  __init__.py  settings.toml
scripts/: .gitkeep
tests/: test_backend.py  test_index.py  test_memory_system.py  test_retrival.py  test_scheduler.py  test_tools.py  test_vault.py
vault/: .gitkeep
vault/conversations/: 2026-07-10_4bc652.md  2026-07-10_4d0e0b.md  2026-07-13_075329.md  2026-07-13_6a2c9b.md  2026-07-13_f31dfd.md  2026-07-17_09706e.md
vault/goals/: 045b707b.md  0777a6f1.md  39f400.md  3d06f9d1.md  4d4bb4e1.md  5067797b.md  52e2c13b.md  5d1446f8.md  657dd544.md  68ce2564.md  7a50df6d.md  8850d764.md  89f7a13a.md  8ccfcab5.md  9ad8a5a7.md  a78a1c2a.md  bc3d74ce.md  e0f0b14a.md  eb583090.md  gym.md
vault/journals/: 2026-07-12.md  919cdd.md
vault/memories/: 0391ccbb.md  06ab73a1.md  24e9e7d4.md  3206a18a.md  468864a3.md  6f797ae8.md  7373aebc.md  7bdfa848.md  839ceef1.md  84519cad.md  8a182dec.md  8d275007.md  9f71b187.md  a2e963b5.md  a4fd0c9a.md  a5e97d67.md  bfc0e69e.md  coffee.md  d10b436a.md  d2eed4e4.md  e8f3a573.md
vault/notes/: 83890652.md
vault/people/: 06d11ca5.md  0bc2ef94.md  101e67b0.md  2d20c8c3.md  2f2d0eb6.md  2f7c0164.md  656615f6.md  75100a13.md  763b6b39.md  80edf023.md  907827ee.md  b9000d14.md  d88cc327.md  df204b09.md  e79f7dcf.md
vault/preferences/: 14d1630f.md  18620395.md  1d6ab351.md  25ffcdb1.md  3258ff4d.md  33e06ebb.md  34a4f46a.md  3824215a.md  (+25 more)
(+10 files in other folders)
