[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fumi"
version = "0.1.0"
description = "Fumi AI - Modular personal AI assistant with local memory, RAG, and tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.4.0"

]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]
